# mutli-agents-azure-cloud-integration

./: README.md
crewai-agent-azure/: main.py  pyproject.toml
crewai-agent-azure/src/agents/: agents.py  crew.py  tasks.py
crewai-agent-azure/src/agents/tools/: financial.py  scraper.py
crewai-agent-azure/src/api/: main.py  models.py  routes.py
crewai-agent-azure/src/shared/: config.py  database.py  llm.py  storage.py
