[project]
name = "crewai-agent-azure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-monitor-opentelemetry>=1.6.7",
    "azure-storage-blob>=12.28.0",
    "crewai[azure-ai-inference]>=1.9.3",
    "crewai-tools>=1.9.3",
    "fastapi>=0.133.1",
    "firecrawl-py>=4.17.2",
    "opentelemetry-api>=1.34.1",
    "opentelemetry-sdk>=1.34.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.47",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
    "yfinance>=1.2.0",
]
